Overhaul API responses & data models
